--- a/reverse-coding.html
+++ b/reverse-coding.html
@@ -14,21 +14,18 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
-    /* ===== CODING / PROGRAMMING BACKGROUND (UPDATED) ===== */
-body{
-  min-height:100vh;
-  font-family:'Poppins',sans-serif;
-  color:#fff;
-  background:
-    linear-gradient(120deg, rgba(4,8,35,0.55), rgba(0,0,0,0.75)),
-    url("https://images.unsplash.com/photo-1504639725590-34d0984388bd?auto=format&fit=crop&w=1800&q=80");
-  background-size:cover;
-  background-position:center;
-  background-attachment:fixed;
-}
-
-
-
+    /* ===== CODING BACKGROUND ===== */
+    body{
+      min-height:100vh;
+      font-family:'Poppins',sans-serif;
+      color:#fff;
+      background:
+        linear-gradient(120deg, rgba(4,8,35,0.55), rgba(0,0,0,0.75)),
+        url("https://images.unsplash.com/photo-1504639725590-34d0984388bd?auto=format&fit=crop&w=1800&q=80");
+      background-size:cover;
+      background-position:center;
+      background-attachment:fixed;
+    }
 
     /* ===== Header ===== */
     header{
@@ -69,6 +66,11 @@ body{
       text-shadow:0 0 10px #00f0ff;
     }
 
+    h3{
+      color:#8ffcff;
+      margin:25px 0 15px;
+    }
+
     p{
       line-height:1.8;
       color:#ddd;
@@ -80,12 +82,38 @@ body{
       line-height:1.6;
     }
 
-    /* ===== PAYMENT (SIMPLE TEXT) ===== */
-    .payment{
-      margin-top:18px;
-      font-size:1rem;
-      color:#ccc;
-      text-align:left;
+    /* ===== COORDINATORS ===== */
+    .coordinators{
+      margin-top:20px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:20px;
+    }
+
+    .coord-box{
+      background:rgba(0,0,0,0.75);
+      border:2px solid #00f0ff;
+      border-radius:18px;
+      padding:22px;
+      text-align:center;
+      box-shadow:0 0 22px rgba(0,240,255,0.35);
+      transition:0.3s;
+    }
+
+    .coord-box:hover{
+      transform:translateY(-6px);
+      box-shadow:0 0 40px rgba(0,240,255,0.6);
+    }
+
+    .coord-box h4{
+      color:#00f0ff;
+      margin-bottom:6px;
+    }
+
+    .coord-box p{
+      margin:6px 0;
+      font-size:0.95rem;
+      color:#ddd;
     }
 
     /* ===== Buttons ===== */
@@ -153,8 +181,7 @@ body{
     <p>
       Reverse Coding is a logic-based programming challenge where participants are given
       only the <strong>expected output, sample test cases, and constraints</strong>.
-      The task is to analyze the output pattern, identify the hidden logic,
-      and write a program that reproduces the given output.
+      The task is to analyze the output pattern and write a program that reproduces it.
     </p>
     <p>
       This event tests analytical thinking, problem-solving skills,
@@ -165,21 +192,33 @@ body{
     <ol class="rules">
       <li>Participants can take part individually.</li>
       <li>Only output, sample test cases, and constraints will be provided.</li>
-      <li>Participants must identify the logic and write a program to match the output.</li>
+      <li>Participants must identify the logic and write a program.</li>
       <li>Allowed languages: C, C++, Java, Python.</li>
       <li>Internet usage and electronic gadgets are strictly prohibited.</li>
       <li>Code must be written only on the provided system.</li>
-      <li>Plagiarism or malpractice will lead to immediate disqualification.</li>
-      <li>In case of a tie, the decision will be based on accuracy and submission time.</li>
+      <li>Plagiarism or malpractice will lead to disqualification.</li>
+      <li>In case of a tie, accuracy and submission time will be considered.</li>
       <li>The judges’ decision is final.</li>
+      <li>Registration amount per person is 50 rupees.</li>
     </ol>
 
-    <!-- PAYMENT DETAILS -->
-    <div class="payment">
-      <strong>Amount per person:</strong> 50 Rupees
+    <h2>Event Coordinators</h2>
+    <div class="coordinators">
+
+      <div class="coord-box">
+        <h4>Sk.Jasmine</h4>
+        <p>Faculty Coordinator</p>
+        <p><i class="fas fa-phone"></i> 6309457460</p>
+      </div>
+
+      <div class="coord-box">
+        <h4>V.V.D.Sudharani</h4>
+        <p>Student Coordinator</p>
+        <p><i class="fas fa-phone"></i> 9949264274</p>
+      </div>
+
     </div>
 
-    <!-- BACK TO HOME -->
     <div class="center">
       <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
@@ -189,10 +228,9 @@ body{
   </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
   <p>Follow SRK Institute of Technology</p>
-  <div class="social-icons">
+  <div>
     <a href="https://www.instagram.com/srk_college_official_updates" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@srkinstituteoftechnology" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
