--- a/poster-presentation.html
+++ b/poster-presentation.html
@@ -65,6 +65,11 @@
       margin-bottom:14px;
     }
 
+    h3{
+      color:#8ffcff;
+      margin:25px 0 15px;
+    }
+
     p{
       line-height:1.8;
       color:#ddd;
@@ -78,12 +83,38 @@
       color:#e0e0e0;
     }
 
-    /* ===== Payment (SIMPLE, LEFT) ===== */
-    .payment{
-      margin-top:18px;
-      font-size:1rem;
-      color:#ccc;
-      text-align:left;
+    /* ===== COORDINATORS ===== */
+    .coordinators{
+      margin-top:20px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:20px;
+    }
+
+    .coord-box{
+      background:rgba(0,0,0,0.75);
+      border:2px solid #00f0ff;
+      border-radius:18px;
+      padding:22px;
+      text-align:center;
+      box-shadow:0 0 22px rgba(0,240,255,0.35);
+      transition:0.3s;
+    }
+
+    .coord-box:hover{
+      transform:translateY(-6px);
+      box-shadow:0 0 40px rgba(0,240,255,0.6);
+    }
+
+    .coord-box h4{
+      color:#00f0ff;
+      margin-bottom:6px;
+    }
+
+    .coord-box p{
+      margin:6px 0;
+      font-size:0.95rem;
+      color:#ddd;
     }
 
     /* ===== Buttons ===== */
@@ -166,15 +197,27 @@
       <li>Each participant will be given 15 minutes to present and explain their poster.</li>
       <li>Posters should be clear, visually appealing, and readable on a digital screen.</li>
       <li>Judgement will be based on content relevance, creativity, clarity, originality, and presentation skills.</li>
-      <li>The decision of the judging panel will be final, and participants may contact the student coordinator for further assistance.</li>
+      <li>The decision of the judging panel will be final.</li>
+      <li>Registration amount per person is 100 rupees.</li>
     </ol>
 
-    <!-- PAYMENT DETAILS (SIMPLE, LEFT) -->
-    <div class="payment">
-      <strong>Amount per person:</strong> 100 Rupees
+    <h2>Event Coordinators</h2>
+    <div class="coordinators">
+
+      <div class="coord-box">
+        <h4>B.Kanaka Durga</h4>
+        <p>Faculty Coordinator</p>
+        <p><i class="fas fa-phone"></i> 7386597143</p>
+      </div>
+
+      <div class="coord-box">
+        <h4>S.Jyothika Purnima</h4>
+        <p>Student Coordinator</p>
+        <p><i class="fas fa-phone"></i> 9491122241</p>
+      </div>
+
     </div>
 
-    <!-- BACK TO HOME -->
     <div class="center">
       <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
@@ -184,10 +227,9 @@
   </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
   <p>Follow SRK Institute of Technology</p>
-  <div class="social-icons">
+  <div>
     <a href="https://www.instagram.com/srk_college_official_updates" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@srkinstituteoftechnology" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
