--- a/startup-pitch.html
+++ b/startup-pitch.html
@@ -14,7 +14,7 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
-    /* ===== STARTUP / PITCH BACKGROUND (UPDATED) ===== */
+    /* ===== STARTUP BACKGROUND ===== */
     body{
       min-height:100vh;
       font-family:'Poppins',sans-serif;
@@ -66,6 +66,11 @@
       text-shadow:0 0 10px #00f0ff;
     }
 
+    h3{
+      color:#8ffcff;
+      margin:25px 0 15px;
+    }
+
     p{
       line-height:1.8;
       color:#ddd;
@@ -77,12 +82,38 @@
       line-height:1.6;
     }
 
-    /* ===== PAYMENT (SIMPLE TEXT) ===== */
-    .payment{
-      margin-top:18px;
-      font-size:1rem;
-      color:#ccc;
-      text-align:left;
+    /* ===== COORDINATORS ===== */
+    .coordinators{
+      margin-top:20px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:20px;
+    }
+
+    .coord-box{
+      background:rgba(0,0,0,0.75);
+      border:2px solid #00f0ff;
+      border-radius:18px;
+      padding:22px;
+      text-align:center;
+      box-shadow:0 0 22px rgba(0,240,255,0.35);
+      transition:0.3s;
+    }
+
+    .coord-box:hover{
+      transform:translateY(-6px);
+      box-shadow:0 0 40px rgba(0,240,255,0.6);
+    }
+
+    .coord-box h4{
+      color:#00f0ff;
+      margin-bottom:6px;
+    }
+
+    .coord-box p{
+      margin:6px 0;
+      font-size:0.95rem;
+      color:#ddd;
     }
 
     /* ===== Buttons ===== */
@@ -151,7 +182,6 @@
       The Start-Up Pitch event provides a platform for aspiring entrepreneurs to
       showcase their innovative ideas related to
       <strong>technology, innovation, or social impact</strong>.
-      Participants will present their startup concepts before an expert judging panel.
     </p>
     <p>
       This event focuses on creativity, feasibility, problem-solving ability,
@@ -163,21 +193,33 @@
       <li>Only one person can present the startup idea.</li>
       <li>Participants must submit one copy of the abstract before the event.</li>
       <li>PPTs are allowed for the presentation.</li>
-      <li>Participants can bring their own laptops for the presentation.</li>
-      <li>Pitch duration: 10 minutes presentation + 2 minutes Q&amp;A.</li>
-      <li>Ideas must be original and related to technology, innovation, or social impact.</li>
-      <li>Evaluation criteria: Problem Statement, Innovation, Feasibility, Business Model, Presentation Skills.</li>
-      <li>Use of offensive or inappropriate content is strictly prohibited.</li>
-      <li>Decision of the judges will be final.</li>
-      <li>Participants must maintain discipline and follow event coordinator instructions.</li>
+      <li>Participants can bring their own laptops.</li>
+      <li>Pitch duration: 10 minutes + 2 minutes Q&amp;A.</li>
+      <li>Ideas must be original and related to technology or social impact.</li>
+      <li>Evaluation includes innovation, feasibility, and presentation skills.</li>
+      <li>Offensive or inappropriate content is prohibited.</li>
+      <li>Judges’ decision is final.</li>
+      <li>Participants must follow coordinator instructions.</li>
+      <li>Registration amount per person is 50 rupees.</li>
     </ol>
 
-    <!-- PAYMENT DETAILS -->
-    <div class="payment">
-      <strong>Amount per person:</strong> 50 Rupees
+    <h2>Event Coordinators</h2>
+    <div class="coordinators">
+
+      <div class="coord-box">
+        <h4>M.Sampath Kumari</h4>
+        <p>Faculty Coordinator</p>
+        <p><i class="fas fa-phone"></i> 9391198389</p>
+      </div>
+
+      <div class="coord-box">
+        <h4>R.Tejaswi</h4>
+        <p>Student Coordinator</p>
+        <p><i class="fas fa-phone"></i> 8639852700</p>
+      </div>
+
     </div>
 
-    <!-- BACK TO HOME -->
     <div class="center">
       <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
@@ -187,10 +229,9 @@
   </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
   <p>Follow SRK Institute of Technology</p>
-  <div class="social-icons">
+  <div>
     <a href="https://www.instagram.com/srk_college_official_updates" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@srkinstituteoftechnology" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
