--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body{
 
 .hero h1{
   font-family:'Orbitron',sans-serif;
-  font-size:3.1rem;
+  font-size:2.8rem;
   color:#00ffff;
   text-shadow:0 0 35px #00ffff,0 0 80px #00eaff,0 0 150px #8f00ff;
 }
@@ -287,9 +287,9 @@ footer p{
   <h1>SRK TECHSPARK-2025</h1>
   <h2>Department of CSE – AI & ML</h2>
   <p>
-    Techspak 2025 is where data turns into intelligence and ideas evolve into impact.
-    Explore the power of Artificial Intelligence and Machine Learning through innovation,
-    experimentation, and collaboration.
+    TTechspak 2025 is where data turns into intelligence and ideas evolve into impact.
+Explore the power of Artificial Intelligence and Machine Learning through innovation, experimentation, and collaboration.This is not just a fest — it’s a launchpad for future innovators.
+Be part of Techspak 2025 and create the intelligence that defines the next generation.
   </p>
 </div>
 
