--- a/paper-presentation.html
+++ b/paper-presentation.html
@@ -180,10 +180,11 @@
       <li>Paper topics should be related to CSE, AI, ML, or emerging technologies.</li>
       <li>Presentation time: 8 minutes + 2 minutes Q&A.</li>
       <li>PPT presentation is mandatory.</li>
-      <li>Participants must submit the abstract before the event.</li>
+      <li>Participants must submit the paper before the event.</li>
       <li>Plagiarism will lead to immediate disqualification.</li>
       <li>Judging criteria include innovation, technical content, clarity, and presentation.</li>
       <li>The judges’ decision will be final.</li>
+      <li>Participants send the paper to the email address: srkcsmfest@gmail.com</li>
       <li>Registration amount per person is 100 rupees.</li>
     </ol>
 
