--- a/paper-presentation.html
+++ b/paper-presentation.html
@@ -192,14 +192,14 @@
     <div class="coordinators">
 
       <div class="coord-box">
-        <h3>Faculty Coordinator</h3>
-        <p><strong>Dr.D.Anusha</strong></p>
+        <h3>Dr.D.Anusha</h3>
+        <p><strong>Faculty Coordinator</strong></p>
         <p><i class="fas fa-phone"></i> 8886123576</p>
       </div>
 
       <div class="coord-box">
-        <h3>Student Coordinator</h3>
-        <p><strong>Sk.Shabnam</strong></p>
+        <h3>Sk.Shabnam</h3>
+        <p><strong>Student Coordinator</strong></p>
         <p><i class="fas fa-phone"></i> 9550458722</p>
       </div>
 
@@ -217,7 +217,7 @@
 <footer>
   <p>Follow SRK Institute of Technology</p>
   <div>
-    <a href="https://www.instagram.com/srk_college_official_updates" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/srkinstituteoftechnology?igsh=MXRjOG1kNXVhajJwMw==" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@srkinstituteoftechnology" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
