--- a/poster-presentation.html
+++ b/poster-presentation.html
@@ -230,7 +230,7 @@
 <footer>
   <p>Follow SRK Institute of Technology</p>
   <div>
-    <a href="https://www.instagram.com/srk_college_official_updates" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/srkinstituteoftechnology?igsh=MXRjOG1kNXVhajJwMw==" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@srkinstituteoftechnology" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
