--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ footer p{
   <h1>SRK TECHSPARK-2025</h1>
   <h2>Department of CSE – AI & ML</h2>
   <p>
-    TTechspak 2025 is where data turns into intelligence and ideas evolve into impact.
+    Techspark 2025 is where data turns into intelligence and ideas evolve into impact.
 Explore the power of Artificial Intelligence and Machine Learning through innovation, experimentation, and collaboration.This is not just a fest — it’s a launchpad for future innovators.
 Be part of Techspak 2025 and create the intelligence that defines the next generation.
   </p>
@@ -334,7 +334,7 @@ Be part of Techspak 2025 and create the intelligence that defines the next gener
   </div>
 </div>
 
-<div class="spot"><strong>Spot Registrations Are Available</strong></div>
+<div class="spot"><strong>Spot Registrations Are Also Available</strong></div>
 
 
 
