--- a/snap2prompt.html
+++ b/snap2prompt.html
@@ -204,7 +204,7 @@
     <div class="coordinators">
 
       <div class="coord-box">
-        <h4>B.jessi Kiranmai</h4>
+        <h4>B.Jessi Kiranmai</h4>
         <p>Faculty Coordinator</p>
         <p><i class="fas fa-phone"></i> 8520036337</p>
       </div>
